// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Avatar /> > Snapshots > should match snapshot 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Avatar_avatar__vljy2n0"
    style="--height-mobile__iuzg895u: 48px; --width-mobile__iuzg895c: 48px;"
  />
</div>
`;

exports[`<Avatar /> > Snapshots > should match snapshot in default avatar with children 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Avatar_avatar__vljy2n0"
    style="--height-mobile__iuzg895u: 48px; --width-mobile__iuzg895c: 48px;"
  >
    <p>
      GG
    </p>
  </div>
</div>
`;

exports[`<Avatar /> > Snapshots > should match snapshot in default avatar with children and circle 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Avatar_avatar__vljy2n0 Avatar_avatar_circle_true__vljy2n1"
    style="--height-mobile__iuzg895u: 48px; --width-mobile__iuzg895c: 48px;"
  >
    <p>
      GG
    </p>
  </div>
</div>
`;

exports[`<Avatar /> > Snapshots > should match snapshot in default avatar with src and alt prop 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Avatar_avatar__vljy2n0"
    style="--height-mobile__iuzg895u: 48px; --width-mobile__iuzg895c: 48px;"
  >
    <img
      alt="React95 brand logo"
      class="Avatar_imgStyle__vljy2n2"
      src="https://github.com/React95.png"
    />
  </div>
</div>
`;

exports[`<Avatar /> > value prop > should render avatar with circle 1`] = `
<div>
  <div
    class="Frame_height-mobile__iuzg895x Frame_width-mobile__iuzg895f Avatar_avatar__vljy2n0 Avatar_avatar_circle_true__vljy2n1"
    style="--height-mobile__iuzg895u: 48px; --width-mobile__iuzg895c: 48px;"
  >
    GG
  </div>
</div>
`;
